package BombermanGame.Graphics;

public interface IRender {
    void update();
    void render(Screen screen);
}
